# third_party_expat

./: 00-backport-CVE-2021-45960.patch  03-backport-CVE-2022-23852-lib-Detect-and-prevent-integer-overflow-in-XML_GetBu.patch  06-backport-CVE-2022-25235-lib-Add-missing-validation-of-encoding.patch  08-backport-CVE-2022-25313-Prevent-stack-exhaustion-in-build_model.patch  10-backport-CVE-2022-25315-Prevent-integer-overflow-in-storeRawNames.patch  13-backport-CVE-2022-43680.patch  14-backport-Fix-build_model-regression.patch  15-backport-lib-Drop-unused-macro-UTF8_GET_NAMING.patch  17-backport-lib-Relax-fix-to-CVE-2022-25236-with-regard-to-RFC-3.patch  18-backport-tests-Cover-CVE-2022-25236.patch  23-adapt_previewer_compilation.patch  BUILD.gn  Changes  OAT.xml  README.OpenSource  backport-0001-CVE-2022-40674.patch  backport-0002-CVE-2022-40674.patch  backport-CVE-2021-46143.patch  backport-CVE-2022-22822-CVE-2022-22823-CVE-2022-22824-CVE-2022-22825-CVE-2022-22826-CVE-2022-22827.patch  backport-CVE-2022-23852-tests-Cover-integer-overflow-in-XML_GetBuffer-CVE-20.patch  backport-CVE-2022-23990-lib-Prevent-integer-overflow-in-doProlog-CVE-2022-23.patch  backport-CVE-2022-25236-lib-Protect-against-malicious-namespace-declarations.patch  backport-CVE-2022-25314-Prevent-integer-overflow-in-copyString.patch  backport-lib-Fix-harmless-use-of-uninitialized-memory.patch  backport-tests-Cover-missing-validation-of-encoding.patch  backport-tests-Cover-overeager-DTD-destruction-in-XML_Externa.patch  backport-tests-Cover-relaxed-fix-to-CVE-2022-25236.patch  backport-tests-Protect-against-nested-element-declaration-mod.patch  bundle.json  expat.spec  expat.yaml  install.sh
expat/lib/: xmlparse.c
include/expat_config/: expat_config.h
lib/: xmlparse.c  xmlrole.c  xmltok.c
testdata/largefiles/: ns_att_test.xml  recset.xml  wordnet_glossary-20010201.rdf
tests/: runtests.c
